ui/viewer.css
#tpr-viewer-container {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2000;
    display: 'none';
}

#tpr-viewer {
    position: relative;
    height: 90%;
    width: 90%;
    top: 5%;
    left: 5%;
}

#viewer {
    border: 10px solid white;
    border-radius: 4px;
}

#tpr-viewer-container #viewer-canvas {
    height: 100%;
    width: 100%;
    background: black;
    display: block;
}

#screen {
    margin-bottom: -20px;
}

#tpr-viewer-container #viewer-controls {
    height: 10%;
    width: 100%;
    position: relative;
}

.time-slider-container {
    height: 25px;
}

#time-slider .ui-slider-range {
    background: #729fcf;
}

#time-slider {
    top: 20px;
    border-radius: 0px !important;
    border: none !important;
    height: 5px;
}

#time-slider .ui-slider-handle {
    display: none;
}

#time-slider .ui-slider-range {
    border-radius: 0px;
    border: none;
}

#tpr-viewer-container .controls {
    padding: 5px;
    text-align: left;
    background: black;
}

.controls button {
    vertical-align: middle;
    max-height: 70%;
    height: 70%;
    width: auto;
    font-weight: bold;
    color: black;
    cursor: pointer;
}

.controls .tpr-button {
    vertical-align: middle;
    display: inline-block;
    width: 38px;
    height: 38px;
    background-size: contain;
    cursor: pointer;
}

.tpr-button-play {
    background: no-repeat url('chrome-extension://__MSG_@@extension_id__/ui/images/play.png');
}

.tpr-button-pause {
    background: no-repeat url('chrome-extension://__MSG_@@extension_id__/ui/images/pause.png');
}

.tpr-button-reset {
    background: no-repeat url('chrome-extension://__MSG_@@extension_id__/ui/images/reset.png');
}

.tpr-button-stop {
    background: no-repeat url('chrome-extension://__MSG_@@extension_id__/ui/images/stop.png');
}

/* for debugging */
#crop-slider {
    display: none;
}

